--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
   },
   "homepage": "https://github.com/Vihaes/frontend-project-44#readme",
   "dependencies": {
-    "node": "^19.3.0"
+    "node": "^19.3.0",
+    "readline-sync": "^1.4.10"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
+  },
+  "devDependencies": {
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
