--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,4 +15,7 @@ parserOptions:
                     "js": "always"
             }
         ],
+        "no-unused-vars": [
+            "warn"
+        ]
 }
