--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,16 +6,9 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-"rules": {
-        "no-console": "off",
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-                    "js": "always"
-            }
-        ],
-        "no-unused-vars": [
-            "warn"
-        ]
-}
+"rules":
+  {
+    "no-console": "off",
+    "import/extensions": ["error", "ignorePackages", { "js": "always" }],
+    "no-unused-vars": ["warn"],
+  }
